# hopr

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeListsLib.txt  CMakeListsMachine.txt  INSTALL  INSTALL.md  MULTILICENSING.md  Makefile  Makefile.defs  README  README.md  REFERENCE.md
cmake/: FindCGNS.cmake
converter/: parameter_convert.ini
doc/Meshformat/: Makefile  Meshformat.tex
doc/Meshformat/pics/: CGNS.odg  HOnodes.odg  flip.odg  parallel_readin.odg
doc/doxygen/: builddoxy.sh
documentation/: Meshformat_0_new.tex  Meshformat_1_new.tex  hdf5meshes.ods
documentation/Meshformat/: Meshformat.tex  Meshformat.xls  cgns_cube.odg
documentation/Meshformat/pics/: ex_allelem.odg
doxygen/: builddoxy.sh  doxyconfig  mainpage.txt
share/: Makefile
src/: CMakeLists.txt  Makefile  defines.f90  globals.f90  headers.f90  hopr.f90  hopr.h  io_hdf5.f90  sortingtools.f90  srcfiles.mk
src/basis/: basis.f90  basis1D.f90  basis_vars.f90  changeBasis.f90  hexaBasis.f90  prismBasis.f90  pyraBasis.f90  quadBasis.f90  tetraBasis.f90  triaBasis.f90
src/mesh/: cartmesh.f90  curved.f90  curvedcartmesh.f90  globaluniquenodes.f90  mesh.f90  mesh_basis.f90  mesh_connect.f90  mesh_jacobians.f90  mesh_postdeform.f90  mesh_tolerances.f90  mesh_tools.f90  mesh_vars.f90  splittohex.f90  zcorrection.f90
src/mhdeq/: mhdeq.f90  mhdeq_tools.f90  mhdeq_vars.f90
src/mhdeq/ccint/: ccint.f90  ccint_vars.f90
src/mhdeq/solov/: newton.f90  praxis.f90  psieval.f90  solov.f90  solov_vars.f90
src/mhdeq/vmec/: recomputelambda.f90  track_spline1_mod.f90  vmec.f90  vmec_mappings.f90  vmec_vars.f90
src/output/: output.f90  output_cgns.f90  output_hdf5.f90  output_tecplot.f90  output_vars.f90  output_vtk.f90
src/readin/: isovaryingstring.f90  readin_ANSA.f90  readin_CGNS.f90  readin_GMSH.f90  readin_GMSH_Vars.f90  readin_ICEM.f90  readin_gambit.f90  readin_hdf5.f90  readin_hdf5_old.f90  readin_specmesh2d.f90  readintools.f90
src/search/: search.f90  search_vars.f90
src/sfc/: Makefile  evalhilbert.c  hilbert.c  hilbert.h  sortijk.f90  spacefillingcurve.f90  testF.f95
src/vmec/: track_spline1_mod.f90  vmec.f90  vmec_bak.f90  vmec_mappings.f90  vmec_vars.f90
tools/blockgridgenerator/: block.py  boundarycondition.py  ffs.config  main.py  mainwindow.ui  model.py  view.py
tools/buildTool/: HALOBase.pm  Particles.pm  RECIPES.pm  build.pl  config.pm  posthandle_mods.sh  prehandle_mods.sh
tools/builddeps/: builddeps
tools/yplusestimator/: Makefile  deplist.mk  srcfiles.mk  yplusestimator.f90
tutorials/: README  executeall.sh
tutorials/1-01-cartbox/: parameter.ini  parameter_ex1.ini  parameter_ex2.ini
tutorials/1-02-cartbox_periodic/: parameter.ini
tutorials/1-03-cartbox_multiple/: parameter.ini
tutorials/1-04-cartbox_multiple_stretch/: parameter.ini
tutorials/1-05-curved_structured/: parameter.ini
tutorials/1-06-curved-postdeform/: parameter.ini  parameter2.ini  parameter3.ini  parameter6.ini  parameter_cylinderinbox.ini
tutorials/1-07-curved-torus/: parameter.ini
tutorials/1-08-curved-sphere/: parameter.ini  parameter_emptysphereincube.ini  parameter_shell.ini  parameter_sphereincube.ini
tutorials/1-09-cartbox_nonconforming/: parameter.ini
tutorials/1-09-postdeform-nozzle/: fitted.txt  parameter.ini  profile_fit.m
tutorials/1-09-vmec-w7x/: parameter.ini  visu_eq.pvsm
tutorials/1-10-postdeform-nozzle/: parameter.ini
tutorials/1-11-postdeform_nonconforming/: parameter.ini  parameter.ini~
tutorials/1-12-postdeform_periodic_nonconform/: parameter.ini
tutorials/1-20-vmec-w7x/: debugvisu.pvsm  parameter.ini  wout_d23p4_tm_coarse.nc  wout_toksy.nc
tutorials/1-21-nonconforming-soloviev/: parameter.ini
tutorials/1-22-soloviev/: debugvisu.pvsm  parameter.ini
tutorials/1-23-nonconform_iotabox/: parameter.ini  view2d.pvcc  view3d.pvcc  visu.pvsm  visudeform.pvsm
tutorials/2-01-external_mesh_sphere/: parameter.ini  spheremesh01.cgns  spheremesh04.cgns
tutorials/2-02-external_mesh_sphere_curved/: parameter.ini  sphere_surfmesh_04.cgns  sphere_surfmesh_06.cgns  sphere_surfmesh_08.cgns  sphere_surfmesh_10.cgns  sphere_surfmesh_12.cgns  sphere_surfmesh_16.cgns  sphere_surfmesh_20.cgns  sphere_surfmesh_32.cgns  spheremesh02.cgns
tutorials/2-03-external_mesh_Gmsh_curved/: parameter.ini
tutorials/2-04-external_Specmesh_curved/: KT3Mesh.mesh  NACA0012.mesh  parameter.ini  parameter_KT3.ini  specmesh_NACA0012.control
tutorials/3-01-agglomeration_NACA/: NACA0012_icem_32elems.cgns  NACA0012_icem_viscous_32elems.cgns  parameter.ini
tutorials/3-02-agglomeration_sphere/: parameter.ini  sphere_base_agglo_S3.cgns  sphere_base_agglo_S5.cgns  sphere_base_agglo_S7.cgns
